# binarizer

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  project.conf
src/: Main.c  Main.h
